src/test/deca/context/valid/LE/Validparameter.deca
// Historique:
//    cree le 19/01/2022


class B {
    int y;
}
    
    
class A {
    int x;

    int ajoute(int x, B b){
        return x+b.y;
    }
}
