src/test/deca/context/invalid/LE/champPasdef.deca
// Historique:
//    cree le 22/01/2022

class C1{
    
}

class C2 extends C1 {
    int methode () {
        return this.a ;
    }
}